--- a/p8105_hw2_cw3370.md
+++ b/p8105_hw2_cw3370.md
@@ -1,19 +1,11 @@
----
-title: "p8105_hw2_cw3370"
-output: github_document
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
-library(janitor)
-library(readxl)
-library(lubridate)
-```
+p8105\_hw2\_cw3370
+================
 
 # Problem 1
+
 ### Read and clean the Mr.Trash Wheel sheet
-```{r}
+
+``` r
 ##specify the Mr. Trash Wheel sheet in the Excel file and to omit non-data entries
 mr_trash_wheel_df <- 
   read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "Mr. Trash Wheel",range = "A2:N408") %>% 
@@ -24,15 +16,24 @@ mr_trash_wheel_df <-
 ##round the number of sports balls to the nearest integer
 mr_trash_wheel_df$`sports_balls` <- round(mr_trash_wheel_df$`sports_balls`)
 ```
-<font size = 4 face="Times New Roman">Mr.Trash Wheel sheet includes `r nrow(mr_trash_wheel_df)` observations for `r ncol(mr_trash_wheel_df)` variables. For variables, they are `r colnames(mr_trash_wheel_df)`. 
 
-`r colnames(mr_trash_wheel_df)[1]` is the number of dumpster. `r colnames(mr_trash_wheel_df)[2:4]` is the date of dumpster to be collected. `r colnames(mr_trash_wheel_df)[5:14]` describe the trash in the dumpster. 
+<font size = 4 face="Times New Roman">Mr.Trash Wheel sheet includes 344
+observations for 14 variables. For variables, they are dumpster, month,
+year, date, weight\_tons, volume\_cubic\_yards, plastic\_bottles,
+polystyrene, cigarette\_butts, glass\_bottles, grocery\_bags,
+chip\_bags, sports\_balls, homes\_powered.
 
-The median number of sports balls in a dumpster in 2019 is `r median(pull(filter(mr_trash_wheel_df,year==2019),var = -2))`</font>
+dumpster is the number of dumpster. month, year, date is the date of
+dumpster to be collected. weight\_tons, volume\_cubic\_yards,
+plastic\_bottles, polystyrene, cigarette\_butts, glass\_bottles,
+grocery\_bags, chip\_bags, sports\_balls, homes\_powered describe the
+trash in the dumpster.
 
+The median number of sports balls in a dumpster in 2019 is 8.5</font>
 
 ### Read and clean precipitation data for 2018 and 2019
-```{r}
+
+``` r
 ## read the data
 ## filter() to omit rows without precipitation data
 ## mutate() to add the variable year,change the variable month to character
@@ -52,16 +53,18 @@ Precipitation2019_df <-
 Precipitation_bind_df <- 
   bind_rows(Precipitation2018_df,Precipitation2019_df) %>% 
   relocate(year)
-
 ```
-<font size = 4 face="Times New Roman">For the precipitation data for 2018,2019, we collected `r nrow(Precipitation_bind_df)` month. 
 
-The total precipitation in 2018 is `r sum(pull(filter(Precipitation_bind_df,year==2018),var = -1))`, including `r nrow(filter(Precipitation_bind_df,year==2018))` month. 
+<font size = 4 face="Times New Roman">For the precipitation data for
+2018,2019, we collected 18 month.
 
-The total precipitation in 2019 is `r sum(pull(filter(Precipitation_bind_df,year==2019),var = -1))`, only including `r  nrow(filter(Precipitation_bind_df,year==2019))` month.</font>
+The total precipitation in 2018 is 70.33, including 12 month.
+
+The total precipitation in 2019 is 16.67, only including 6 month.</font>
 
 # Problem 2
-```{r}
+
+``` r
 #variable president:1 means the president was republican and -1 means the president was democratic
 pols_month_df <- 
   read_csv("data/pols-month.csv") %>% 
@@ -74,10 +77,31 @@ pols_month_df <-
          president = prez_gop - prez_dem) %>% 
   select(-prez_dem,-prez_gop,-day)
 ```
-<font size = 4 face="Times New Roman">pols_month_df contains the data from 'pols_month.csv', including `r nrow(pols_month_df)` observations of `r ncol(pols_month_df)` related to the number of national politicians who are democratic or republican from  year `r min(select(pols_month_df,year))` to year `r `max(select(pols_month_df,year))`.
 
-`r colnames(pols_month_df)[1:2]` are the month and day of count. `r colnames(pols_month_df)[3:5]` are the numbers of republican governors senator and representatives on the count date. `r colnames(pols_month_df)[6:8]` are the numbers of democratic governors senator and representatives on the count date. `r colnames(pols_month_df)[9]` are the indicators of the president, 1 means republican,-1 means democratic.</font>
-```{r}
+    ## Rows: 822 Columns: 9
+
+    ## ─ Column specification ────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+<font size = 4 face="Times New Roman">pols\_month\_df contains the data
+from ‘pols\_month.csv’, including 822 observations of 9 related to the
+number of national politicians who are democratic or republican from
+year 1947 to year `r`max(select(pols\_month\_df,year))\`.
+
+year, month are the month and day of count. gov\_gop, sen\_gop, rep\_gop
+are the numbers of republican governors senator and representatives on
+the count date. gov\_dem, sen\_dem, rep\_dem are the numbers of
+democratic governors senator and representatives on the count date.
+president are the indicators of the president, 1 means republican,-1
+means democratic.</font>
+
+``` r
 snp_df <- 
   read_csv("data/snp.csv") %>% 
   janitor::clean_names() %>%
@@ -91,10 +115,25 @@ snp_df <-
          ) %>% 
   relocate(year,month)
 ```
-<font size = 4 face="Times New Roman">snp_df contains the data from 'snp.csv', including `r nrow(snp_df)` observations of `r ncol(snp_df)` variables related to Standard & Poor’s stock market index (S&P) from year `r min(select(snp_df,year))` to year `r max(select(snp_df,year))`.
 
-`r colnames(snp_df)[1:2]` are the year of month. `r colnames(snp_df)[3]`are the S&P.</font>
-```{r}
+    ## Rows: 787 Columns: 2
+
+    ## ─ Column specification ────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+<font size = 4 face="Times New Roman">snp\_df contains the data from
+‘snp.csv’, including 787 observations of 3 variables related to Standard
+& Poor’s stock market index (S&P) from year 1950 to year 2015.
+
+year, month are the year of month. closeare the S&P.</font>
+
+``` r
 unemployment_df <- 
   read_csv("data/unemployment.csv") %>% 
   janitor::clean_names() %>%
@@ -106,10 +145,25 @@ unemployment_df <-
   mutate(month = recode(month,"jan" = month.name[1],"feb" = month.name[2],"mar" = month.name[3],"aapr" = month.name[4],"may" = month.name[5],"jun" = month.name[6],"jul" = month.name[7],"aug" = month.name[8],"sep" = month.name[9],"oct" = month.name[10],"nov" = month.name[11],"dec" = month.name[12]),
          year = as.integer(year))
 ```
-<font size = 4 face="Times New Roman">unemployment_df contains the data from unemployment.csv, including `r nrow(unemployment_df)` observations of `r ncol(unemployment_df)` variables related to the percentage of unemployment from year `r min(select(unemployment_df,year))` to year `r max(select(unemployment_df,year))`.
 
-`r colnames(unemployment_df)[1:2]` are the year and month. `r colnames(unemployment_df)[3]`are the percentage of unemployment.</font>
-```{r}
+    ## Rows: 68 Columns: 13
+
+    ## ─ Column specification ────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+<font size = 4 face="Times New Roman">unemployment\_df contains the data
+from unemployment.csv, including 816 observations of 3 variables related
+to the percentage of unemployment from year 1948 to year 2015.
+
+year, month are the year and month. unemploymentare the percentage of
+unemployment.</font>
+
+``` r
 ## join by year and month
 join_df <- 
   left_join(pols_month_df,snp_df,by = c("year","month")) %>% 
@@ -135,18 +189,26 @@ join1_df <-
   left_join(pols_month_df1,snp_df1,by = "date") %>% 
   left_join(unemployment_df1,by = "date") %>% 
   select(-year.y,-month.y,-year,-month,-date)
-
 ```
 
-<font size = 4 face="Times New Roman">We use two ways to join these data. The first one is to left join by year and month. The second one is to create a Date variable by ymd() and join by this Date variable. The outcome is same.
+<font size = 4 face="Times New Roman">We use two ways to join these
+data. The first one is to left join by year and month. The second one is
+to create a Date variable by ymd() and join by this Date variable. The
+outcome is same.
 
-join_df includes `r nrow(join_df)` observations of  `r ncol(join_df)` variables. It includes the number of national politicians who are democratic or republican from  year `r  min(select(pols_month_df,year))` to year`r `max(select(pols_month_df,year))`, Standard & Poor’s stock market index (S&P) from year `r  min(select(snp_df,year))` to year `r `max(select(snp_df,year))`,percentage of unemployment from year`r min(select(unemployment_df,year))` to year `r max(select(unemployment_df,year))`. 
+join\_df includes 822 observations of 11 variables. It includes the
+number of national politicians who are democratic or republican from
+year 1947 to
+year`r`max(select(pols\_month\_df,year))`, Standard & Poor’s stock market index (S&P) from year 1950 to year`r
+`max(select(snp_df,year))`,percentage of unemployment from year1948 to
+year 2015.
 
-The key variable in join_df is the same as three dataframe above. So l don't explain again.</font>
+The key variable in join\_df is the same as three dataframe above. So l
+don’t explain again.</font>
 
 # Problem 3
 
-```{r}
+``` r
 popular_babyname_df1 <- 
   read_csv("data/Popular_Baby_Names.csv") %>% 
   janitor::clean_names() %>%
@@ -162,7 +224,20 @@ popular_babyname_df1 <-
       ),
     childs_first_name = str_to_title(childs_first_name)
     )
+```
 
+    ## Rows: 19418 Columns: 6
+
+    ## ─ Column specification ────────────────────────────
+    ## Delimiter: ","
+    ## chr (3): Gender, Ethnicity, Child's First Name
+    ## dbl (3): Year of Birth, Count, Rank
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
 oliva_df <- 
   filter(popular_babyname_df1,childs_first_name == "Olivia",gender == "Female") %>% 
   select(-count,-gender,-childs_first_name) %>% 
@@ -188,9 +263,6 @@ male_wnh_2016_df <-
 ggplot(data = male_wnh_2016_df, aes(x = rank ,y = count,size = count)) + 
     geom_point(size = 1) +
     labs(title = "Scatterplot" , x = "Rank of Name" , y = "Count of Name")
-
-
-
 ```
 
-
+![](p8105_hw2_cw3370_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
