--- a/p8105_hw2_cw3370.md
+++ b/p8105_hw2_cw3370.md
@@ -9,12 +9,11 @@ p8105\_hw2\_cw3370
 ##specify the Mr. Trash Wheel sheet in the Excel file and to omit non-data entries
 mr_trash_wheel_df <- 
   read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "Mr. Trash Wheel",range = "A2:N408") %>% 
-  janitor::clean_names() 
-##omit rows that do not include dumpster-specific data
-mr_trash_wheel_df <- 
-  filter(mr_trash_wheel_df,dumpster != "NA") 
-##round the number of sports balls to the nearest integer
-mr_trash_wheel_df$`sports_balls` <- round(mr_trash_wheel_df$`sports_balls`)
+  janitor::clean_names() %>% 
+  ##omit rows that do not include dumpster-specific data
+  drop_na(dumpster) %>% 
+  ##round the number of sports balls to the nearest integer
+  mutate(sports_balls = round(sports_balls))
 ```
 
 <font size = 4 face="Times New Roman">Mr.Trash Wheel sheet includes 344
@@ -41,13 +40,13 @@ Precipitation2018_df <-
   read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2018 Precipitation",range = "A2:B14") %>% 
   janitor::clean_names() %>%
   mutate(month = month.name,year = 2018) %>% 
-  filter(total != "NA")
+  drop_na(total)
 
 Precipitation2019_df <- 
   read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2019 Precipitation",range = "A2:B14") %>% 
   janitor::clean_names() %>%
   mutate(month = month.name,year = 2019) %>% 
-  filter(total != "NA")
+  drop_na(total)
 
 ##bind data together
 Precipitation_bind_df <- 
@@ -189,7 +188,44 @@ join1_df <-
   left_join(pols_month_df1,snp_df1,by = "date") %>% 
   left_join(unemployment_df1,by = "date") %>% 
   select(-year.y,-month.y,-year,-month,-date)
+
+skimr::skim(join_df)
 ```
+
+|                                                  |          |
+|:-------------------------------------------------|:---------|
+| Name                                             | join\_df |
+| Number of rows                                   | 822      |
+| Number of columns                                | 11       |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_   |          |
+| Column type frequency:                           |          |
+| character                                        | 1        |
+| numeric                                          | 10       |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ |          |
+| Group variables                                  | None     |
+
+Data summary
+
+**Variable type: character**
+
+| skim\_variable | n\_missing | complete\_rate | min | max | empty | n\_unique | whitespace |
+|:---------------|-----------:|---------------:|----:|----:|------:|----------:|-----------:|
+| month          |          0 |              1 |   3 |   9 |     0 |        12 |          0 |
+
+**Variable type: numeric**
+
+| skim\_variable | n\_missing | complete\_rate |    mean |     sd |      p0 |     p25 |     p50 |     p75 |    p100 | hist  |
+|:---------------|-----------:|---------------:|--------:|-------:|--------:|--------:|--------:|--------:|--------:|:------|
+| year           |          0 |           1.00 | 1980.75 |  19.79 | 1947.00 | 1964.00 | 1981.00 | 1998.00 | 2015.00 | ▇▇▇▇▇ |
+| gov\_gop       |          0 |           1.00 |   22.48 |   5.68 |   12.00 |   18.00 |   22.00 |   28.00 |   34.00 | ▆▆▇▅▅ |
+| sen\_gop       |          0 |           1.00 |   46.10 |   6.38 |   32.00 |   42.00 |   46.00 |   51.00 |   56.00 | ▃▃▇▇▇ |
+| rep\_gop       |          0 |           1.00 |  194.92 |  29.24 |  141.00 |  176.00 |  195.00 |  222.00 |  253.00 | ▃▇▆▃▅ |
+| gov\_dem       |          0 |           1.00 |   27.20 |   5.94 |   17.00 |   22.00 |   28.00 |   32.00 |   41.00 | ▆▅▇▆▂ |
+| sen\_dem       |          0 |           1.00 |   54.41 |   7.37 |   44.00 |   48.00 |   53.00 |   58.00 |   71.00 | ▇▆▇▃▂ |
+| rep\_dem       |          0 |           1.00 |  244.97 |  31.37 |  188.00 |  211.00 |  250.00 |  268.00 |  301.00 | ▇▂▇▇▅ |
+| president      |          0 |           1.00 |    0.06 |   1.01 |   -1.00 |   -1.00 |    1.00 |    1.00 |    2.00 | ▇▁▁▇▁ |
+| close          |         36 |           0.96 |  472.85 | 543.29 |   17.05 |   83.67 |  137.26 |  932.06 | 2107.39 | ▇▁▂▁▁ |
+| unemployment   |         80 |           0.90 |    5.83 |   1.65 |    2.50 |    4.62 |    5.60 |    6.90 |   10.80 | ▃▇▅▂▁ |
 
 <font size = 4 face="Times New Roman">We use two ways to join these
 data. The first one is to left join by year and month. The second one is
@@ -198,10 +234,9 @@ outcome is same.
 
 join\_df includes 822 observations of 11 variables. It includes the
 number of national politicians who are democratic or republican from
-year 1947 to
-year`r`max(select(pols\_month\_df,year))`, Standard & Poor’s stock market index (S&P) from year 1950 to year`r
-`max(select(snp_df,year))`,percentage of unemployment from year1948 to
-year 2015.
+year 1947 to year2015, Standard & Poor’s stock market index (S&P) from
+year 1950 to year 2015,percentage of unemployment from year1948 to year
+2015.
 
 The key variable in join\_df is the same as three dataframe above. So l
 don’t explain again.</font>
