Add explaination for problem 3 and rename the scatterplot

--- a/p8105_hw2_cw3370.md
+++ b/p8105_hw2_cw3370.md
@@ -243,6 +243,11 @@ don’t explain again.</font>
 
 # Problem 3
 
+<font size = 4 face="Times New Roman">Load and tidy the data.
+
+Adjust the ethnicity variable and name\_of\_child variable, omit the
+repeated observations</font>
+
 ``` r
 popular_babyname_df1 <- 
   read_csv("data/Popular_Baby_Names.csv") %>% 
@@ -272,6 +277,9 @@ popular_babyname_df1 <-
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
+<font size = 4 face="Times New Roman">Popularity of the name “Oliva” as
+a female baby and popular male baby name</font>
+
 ``` r
 oliva_df <- 
   filter(popular_babyname_df1,childs_first_name == "Olivia",gender == "Female") %>% 
@@ -280,7 +288,8 @@ oliva_df <-
     names_from = "year_of_birth",
     names_sort = TRUE,
     values_from = "rank"
-  ) 
+  ) %>% 
+  knitr::kable()
 
 popular_male_name_df <- 
   filter(popular_babyname_df1,rank == 1,gender == "Male") %>% 
@@ -289,15 +298,23 @@ popular_male_name_df <-
     names_from = "year_of_birth",
     names_sort = TRUE,
     values_from = "childs_first_name"
-  ) 
+  ) %>% 
+  knitr::kable()
+```
 
+<font size = 4 face="Times New Roman">Produce a scatter plot showing the
+number of children with a name (y axis) against the rank in popularity
+of that name (x axis) for male, white non-hispanic children born in
+2016</font>
+
+``` r
 male_wnh_2016_df <- 
   filter(popular_babyname_df1,ethnicity == "White Non Hisp",year_of_birth == 2016,gender == "Male") %>% 
   select(-ethnicity,-year_of_birth,-gender)
 
 ggplot(data = male_wnh_2016_df, aes(x = rank ,y = count,size = count)) + 
     geom_point(size = 1) +
-    labs(title = "Scatterplot" , x = "Rank of Name" , y = "Count of Name")
+    labs(title = "Name ranks of male white non-hispanic children born in 2016" , x = "Rank of Name" , y = "Count of Name")
 ```
 
-![](p8105_hw2_cw3370_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+![](p8105_hw2_cw3370_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
