--- a/p8105_hw2_cw3370.Rmd
+++ b/p8105_hw2_cw3370.Rmd
@@ -9,6 +9,7 @@ library(tidyverse)
 library(janitor)
 library(readxl)
 library(lubridate)
+library(knitr)
 ```
 
 # Problem 1
@@ -146,6 +147,9 @@ The key variable in join_df is the same as three dataframe above. So l don't exp
 
 # Problem 3
 
+<font size = 4 face="Times New Roman">Load and tidy the data.
+
+Adjust the ethnicity variable and name_of_child variable, omit the repeated observations</font>
 ```{r}
 popular_babyname_df1 <- 
   read_csv("data/Popular_Baby_Names.csv") %>% 
@@ -162,7 +166,10 @@ popular_babyname_df1 <-
       ),
     childs_first_name = str_to_title(childs_first_name)
     )
+```
 
+<font size = 4 face="Times New Roman">Popularity of the name "Oliva" as a female baby and popular male baby name</font>
+```{r}
 oliva_df <- 
   filter(popular_babyname_df1,childs_first_name == "Olivia",gender == "Female") %>% 
   select(-count,-gender,-childs_first_name) %>% 
@@ -179,17 +186,18 @@ popular_male_name_df <-
     names_from = "year_of_birth",
     names_sort = TRUE,
     values_from = "childs_first_name"
-  ) 
+  )
+```
 
+<font size = 4 face="Times New Roman">Produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis) for male, white non-hispanic children born in 2016</font>
+```{r}
 male_wnh_2016_df <- 
   filter(popular_babyname_df1,ethnicity == "White Non Hisp",year_of_birth == 2016,gender == "Male") %>% 
   select(-ethnicity,-year_of_birth,-gender)
 
 ggplot(data = male_wnh_2016_df, aes(x = rank ,y = count,size = count)) + 
     geom_point(size = 1) +
-    labs(title = "Scatterplot" , x = "Rank of Name" , y = "Count of Name")
-
-
+    labs(title = "Name ranks of male white non-hispanic children born in 2016" , x = "Rank of Name" , y = "Count of Name")
 
 ```
 
