produce the table

--- a/p8105_hw2_cw3370.md
+++ b/p8105_hw2_cw3370.md
@@ -263,7 +263,7 @@ popular_babyname_df1 <-
       "White Non Hispanic" = "White Non Hisp"
       ),
     childs_first_name = str_to_title(childs_first_name)
-    )
+    )  
 ```
 
     ## Rows: 19418 Columns: 6
@@ -288,9 +288,19 @@ oliva_df <-
     names_from = "year_of_birth",
     names_sort = TRUE,
     values_from = "rank"
-  ) %>% 
-  knitr::kable()
+  ) 
 
+knitr::kable(oliva_df)
+```
+
+| ethnicity      | 2011 | 2012 | 2013 | 2014 | 2015 | 2016 |
+|:---------------|-----:|-----:|-----:|-----:|-----:|-----:|
+| Asian And Paci |    4 |    3 |    3 |    1 |    1 |    1 |
+| Black Non Hisp |   10 |    8 |    6 |    8 |    4 |    8 |
+| Hispanic       |   18 |   22 |   22 |   16 |   16 |   13 |
+| White Non Hisp |    2 |    4 |    1 |    1 |    1 |    1 |
+
+``` r
 popular_male_name_df <- 
   filter(popular_babyname_df1,rank == 1,gender == "Male") %>% 
   select(-rank,-count,-gender) %>% 
@@ -298,9 +308,17 @@ popular_male_name_df <-
     names_from = "year_of_birth",
     names_sort = TRUE,
     values_from = "childs_first_name"
-  ) %>% 
-  knitr::kable()
+  )
+
+knitr::kable(popular_male_name_df)
 ```
+
+| ethnicity      | 2011    | 2012   | 2013   | 2014   | 2015   | 2016   |
+|:---------------|:--------|:-------|:-------|:-------|:-------|:-------|
+| Asian And Paci | Ethan   | Ryan   | Jayden | Jayden | Jayden | Ethan  |
+| Black Non Hisp | Jayden  | Jayden | Ethan  | Ethan  | Noah   | Noah   |
+| Hispanic       | Jayden  | Jayden | Jayden | Liam   | Liam   | Liam   |
+| White Non Hisp | Michael | Joseph | David  | Joseph | David  | Joseph |
 
 <font size = 4 face="Times New Roman">Produce a scatter plot showing the
 number of children with a name (y axis) against the rank in popularity
