--- a/p8105_hw2_cw3370.Rmd
+++ b/p8105_hw2_cw3370.Rmd
@@ -165,7 +165,8 @@ popular_babyname_df1 <-
       "White Non Hispanic" = "White Non Hisp"
       ),
     childs_first_name = str_to_title(childs_first_name)
-    )
+    )  
+
 ```
 
 <font size = 4 face="Times New Roman">Popularity of the name "Oliva" as a female baby and popular male baby name</font>
@@ -179,6 +180,8 @@ oliva_df <-
     values_from = "rank"
   ) 
 
+knitr::kable(oliva_df)
+
 popular_male_name_df <- 
   filter(popular_babyname_df1,rank == 1,gender == "Male") %>% 
   select(-rank,-count,-gender) %>% 
@@ -187,6 +190,8 @@ popular_male_name_df <-
     names_sort = TRUE,
     values_from = "childs_first_name"
   )
+
+knitr::kable(popular_male_name_df)
 ```
 
 <font size = 4 face="Times New Roman">Produce a scatter plot showing the number of children with a name (y axis) against the rank in popularity of that name (x axis) for male, white non-hispanic children born in 2016</font>
