--- a/p8105_hw2_cw3370.md
+++ b/p8105_hw2_cw3370.md
@@ -63,8 +63,11 @@ The total precipitation in 2019 is 16.67, only including 6 month.</font>
 
 # Problem 2
 
+### Read and clean the pols\_month.csv, snp.csv and unemployment.csv
+
 ``` r
 #variable president:1 means the president was republican and -1 means the president was democratic
+#we find that prez_gop has 5 wrong input 2, which should either be 1 or 0
 pols_month_df <- 
   read_csv("data/pols-month.csv") %>% 
   janitor::clean_names() %>%
@@ -73,7 +76,8 @@ pols_month_df <-
          month = as.integer(month),
          day = as.integer(day),
          month = recode(month,`1` = month.name[1],`2` = month.name[2],`3` = month.name[3],`4` = month.name[4],`5` = month.name[5],`6` = month.name[6],`7` = month.name[7],`8` = month.name[8],`9` = month.name[9],`10` = month.name[10],`11` = month.name[11],`12` = month.name[12]),
-         president = prez_gop - prez_dem) %>% 
+         president = as.numeric(prez_gop - prez_dem),
+         president = recode(president,'1' = "republican",'2' = "republican","-1" = "democratic")) %>% 
   select(-prez_dem,-prez_gop,-day)
 ```
 
@@ -162,6 +166,8 @@ to the percentage of unemployment from year 1948 to year 2015.
 year, month are the year and month. unemploymentare the percentage of
 unemployment.</font>
 
+### Combine three csv together
+
 ``` r
 ## join by year and month
 join_df <- 
@@ -199,8 +205,8 @@ skimr::skim(join_df)
 | Number of columns                                | 11       |
 | \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_   |          |
 | Column type frequency:                           |          |
-| character                                        | 1        |
-| numeric                                          | 10       |
+| character                                        | 2        |
+| numeric                                          | 9        |
 | \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ |          |
 | Group variables                                  | None     |
 
@@ -211,6 +217,7 @@ Data summary
 | skim\_variable | n\_missing | complete\_rate | min | max | empty | n\_unique | whitespace |
 |:---------------|-----------:|---------------:|----:|----:|------:|----------:|-----------:|
 | month          |          0 |              1 |   3 |   9 |     0 |        12 |          0 |
+| president      |          0 |              1 |  10 |  10 |     0 |         2 |          0 |
 
 **Variable type: numeric**
 
@@ -223,7 +230,6 @@ Data summary
 | gov\_dem       |          0 |           1.00 |   27.20 |   5.94 |   17.00 |   22.00 |   28.00 |   32.00 |   41.00 | ▆▅▇▆▂ |
 | sen\_dem       |          0 |           1.00 |   54.41 |   7.37 |   44.00 |   48.00 |   53.00 |   58.00 |   71.00 | ▇▆▇▃▂ |
 | rep\_dem       |          0 |           1.00 |  244.97 |  31.37 |  188.00 |  211.00 |  250.00 |  268.00 |  301.00 | ▇▂▇▇▅ |
-| president      |          0 |           1.00 |    0.06 |   1.01 |   -1.00 |   -1.00 |    1.00 |    1.00 |    2.00 | ▇▁▁▇▁ |
 | close          |         36 |           0.96 |  472.85 | 543.29 |   17.05 |   83.67 |  137.26 |  932.06 | 2107.39 | ▇▁▂▁▁ |
 | unemployment   |         80 |           0.90 |    5.83 |   1.65 |    2.50 |    4.62 |    5.60 |    6.90 |   10.80 | ▃▇▅▂▁ |
 
@@ -242,6 +248,8 @@ The key variable in join\_df is the same as three dataframe above. So l
 don’t explain again.</font>
 
 # Problem 3
+
+### Read and clean the Popular\_Baby\_Names.csv
 
 <font size = 4 face="Times New Roman">Load and tidy the data.
 
@@ -276,6 +284,8 @@ popular_babyname_df1 <-
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### Table for Oliva among female baby and table for popular male baby name
 
 <font size = 4 face="Times New Roman">Popularity of the name “Oliva” as
 a female baby and popular male baby name</font>
@@ -319,6 +329,8 @@ knitr::kable(popular_male_name_df)
 | Black Non Hisp | Jayden  | Jayden | Ethan  | Ethan  | Noah   | Noah   |
 | Hispanic       | Jayden  | Jayden | Jayden | Liam   | Liam   | Liam   |
 | White Non Hisp | Michael | Joseph | David  | Joseph | David  | Joseph |
+
+### Scatterplot for the number and rank of the name
 
 <font size = 4 face="Times New Roman">Produce a scatter plot showing the
 number of children with a name (y axis) against the rank in popularity
