--- a/p8105_hw2_cw3370.md
+++ b/p8105_hw2_cw3370.md
@@ -8,7 +8,7 @@ p8105\_hw2\_cw3370
 ``` r
 ##specify the Mr. Trash Wheel sheet in the Excel file and to omit non-data entries
 mr_trash_wheel_df <- 
-  read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "Mr. Trash Wheel",range = "A2:N408") %>% 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",sheet = "Mr. Trash Wheel",range = "A2:N408") %>% 
   janitor::clean_names() %>% 
   ##omit rows that do not include dumpster-specific data
   drop_na(dumpster) %>% 
@@ -16,7 +16,7 @@ mr_trash_wheel_df <-
   mutate(sports_balls = round(sports_balls))
 ```
 
-<font size = 4 face="Times New Roman">Mr.Trash Wheel sheet includes 344
+<font size = 4 face="Times New Roman">Mr.Trash Wheel sheet includes 345
 observations for 14 variables. For variables, they are dumpster, month,
 year, date, weight\_tons, volume\_cubic\_yards, plastic\_bottles,
 polystyrene, cigarette\_butts, glass\_bottles, grocery\_bags,
@@ -28,7 +28,7 @@ plastic\_bottles, polystyrene, cigarette\_butts, glass\_bottles,
 grocery\_bags, chip\_bags, sports\_balls, homes\_powered describe the
 trash in the dumpster.
 
-The median number of sports balls in a dumpster in 2019 is 8.5</font>
+The median number of sports balls in a dumpster in 2019 is 9</font>
 
 ### Read and clean precipitation data for 2018 and 2019
 
@@ -37,13 +37,13 @@ The median number of sports balls in a dumpster in 2019 is 8.5</font>
 ## filter() to omit rows without precipitation data
 ## mutate() to add the variable year,change the variable month to character
 Precipitation2018_df <- 
-  read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2018 Precipitation",range = "A2:B14") %>% 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",sheet = "2018 Precipitation",range = "A2:B14") %>% 
   janitor::clean_names() %>%
   mutate(month = month.name,year = 2018) %>% 
   drop_na(total)
 
 Precipitation2019_df <- 
-  read_excel("data/Trash-Wheel-Collection-Totals-8-6-19.xlsx",sheet = "2019 Precipitation",range = "A2:B14") %>% 
+  read_excel("data/Trash-Wheel-Collection-Totals-7-2020-2.xlsx",sheet = "2019 Precipitation",range = "A2:B14") %>% 
   janitor::clean_names() %>%
   mutate(month = month.name,year = 2019) %>% 
   drop_na(total)
@@ -55,11 +55,11 @@ Precipitation_bind_df <-
 ```
 
 <font size = 4 face="Times New Roman">For the precipitation data for
-2018,2019, we collected 18 month.
+2018,2019, we collected 24 month.
 
 The total precipitation in 2018 is 70.33, including 12 month.
 
-The total precipitation in 2019 is 16.67, only including 6 month.</font>
+The total precipitation in 2019 is 33.95,also including 12 month.</font>
 
 # Problem 2
 
@@ -76,7 +76,7 @@ pols_month_df <-
          month = as.integer(month),
          day = as.integer(day),
          month = recode(month,`1` = month.name[1],`2` = month.name[2],`3` = month.name[3],`4` = month.name[4],`5` = month.name[5],`6` = month.name[6],`7` = month.name[7],`8` = month.name[8],`9` = month.name[9],`10` = month.name[10],`11` = month.name[11],`12` = month.name[12]),
-         president = as.numeric(prez_gop - prez_dem),
+         president = prez_gop - prez_dem,
          president = recode(president,'1' = "republican",'2' = "republican","-1" = "democratic")) %>% 
   select(-prez_dem,-prez_gop,-day)
 ```
